--- a/indexp2.html
+++ b/indexp2.html
@@ -13,17 +13,17 @@
             <p class="moi_txt" style="color:rgb(26, 26, 26);font-size:2.7em;">-stage chez absolute PC en 2020</br>-obtention du Brevet des collèges en 2020</br>-obtention de la certification allemande en 2021</br>-passage du BAC de français en 2022</br>-passage du BAC en 2023</p>
         </div>
         <div class="pres">
-            <div id="moi"></div>
+            <div id="moi"></div><!--photo-->
             <p class="moi_txt">Valentin</br>Fournel</br>10/02/2005</br></br>1ere 5</br>Institut Notre Dame de Meudon</br>spés:</br>Maths/Physique-Chimie/NSI</p>
-        </div>
+        </div> <!--j'aurais pû faire une listes non ordonnée et enlever les icones à gauches des éléments pour éviter d'utiliser des balises </br>-->
         <div class="langues">
             <div class="comp"><!--gestion des notes sur mes compétences-->
-                <p class="compet compet2 txtgros">anglais</p>
-                <div class="niveaul">
+                <p class="compet compet2 txtgros">anglais</p><!--compétence à lequelle j'attribue une mote entre 0 et 5-->
+                <div class="niveaul"><!--le même motif se répète au cours du site ,seule la couleur des ronds peut varier-->
+                    <div class="rempli c2"></div><!--la class rempli donne la forme de la div tandis que la class c2 permet de remplacer la couleur par défaut de la classe rempli afin de s'adapter au thème-->
                     <div class="rempli c2"></div>
                     <div class="rempli c2"></div>
-                    <div class="rempli c2"></div>
-                    <div class="pasrempli"></div>
+                    <div class="pasrempli"></div><!-- qu'elle soit sur la 1ere ou la 2eme partie du site, la div est grisée pour les points non remplis. Je n'ai donc pas besoin de changer la couleur par défaut.-->
                     <div class="pasrempli"></div>              
                 </div>
            </div>
@@ -40,11 +40,11 @@
         </div>
     </div>
     <div class="boites">
-        <h1 id="h1b2">Informatique</h1>
+        <h1 id="h1b2">Informatique</h1><!--titre de la deuxième partie-->
         <div id="b2">
-            <div class="glass">
+            <div class="glass"><!--div permettant de séparer le texte de l'arrière plan-->
                 <div class="top">
-                    <h2>Hardware</h2>
+                    <h2>Hardware</h2><!--titre de la sous-partie-->
                 </div>
                 
                 <p class="compet">montage de PC</p>
@@ -75,9 +75,9 @@
                     <div class="pasrempli"></div>
                 </div>  
             </div>
-            <div class="glass">
+            <div class="glass"><!--div permettant de séparer le texte de l'arrière plan-->
                 <div class="top">
-                    <h2>Software</h2>
+                    <h2>Software</h2><!--titre de la sous-partie-->
                 </div>
                 <p class="compet">utilisation d'OS(Windows/Ubuntu)</p>
                 <div class="niveau">
