--- a/indexp4.html
+++ b/indexp4.html
@@ -5,16 +5,19 @@
     <link rel="stylesheet" href="styles/stylep4.css">
     <link rel="icon" href="images/travaillogo.png"><!--permet de relier un icone qui s'affichera sur la barre des onglets ouverts-->
     <title>Présentation de travail</title>
+
+    <!--je ne veux pas être dev mais j'aime créer des projets-->
+
 </head>
 <body>
-    <a href="http://valentinf.xyz/DM-NSI-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
+    <a href="http://valentinf.xyz/DM-NSI-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a><!--bouton pour retourner au menu-->
     <div class="image1"><h1>Dévloppeur</h1></div>
-    <div class="boite">
-        <div class="texte t2">
+    <div class="boite"><!--la div permet de définir la disposition des éléments grâce à la propriété display:grid;-->
+        <div class="texte t2"><!--un pattern se répète au cours du site avec du texte à gauche et une image et un dégradé à droite-->
             <p>
             <h4>Le métier de développeur se segmente en différentes catégories.</h4>
-            <ul>
-                <li><a href="#a1">développeur web</a></li>
+            <ul><!--liste des différents types de devs-->
+                <li><a href="#a1">développeur web</a></li><!--lien vers une div située à l'endroit où je traite des dev web-->
                 <li><a href="#a2">développeur mobile</a></li>
                 <li><a href="#a3">développeur logiciels</a></li>
             </ul>
@@ -35,7 +38,7 @@
             </ul>
             </p>
         </div>
-        <div class="image2boite">
+        <div class="image2boite"><!--partie droite de l'ecran avec l'image et le dégradé linéaire-->
             <div class="image2"></div>
         </div>
         <div class="boite">  
