--- a/indexp2.html
+++ b/indexp2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/stylep2.css">
-    <title>Curiculum Vitae</title>
+    <title>Curriculum Vitae</title>
     <link rel="icon" href="images/cvlogo.png"><!--permet de relier un icone qui s'affichera sur la barre des onglets ouverts-->
 </head>
 <body>
