--- a/indexp4.html
+++ b/indexp4.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <a href="http://valentinf.xyz/DM-NSI-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a><!--bouton pour retourner au menu-->
+    <a href="http://valentinf.xyz/dm-nsi-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a><!--bouton pour retourner au menu-->
     <div class="image1"><h1>Dévloppeur</h1></div>
     <div class="boite"><!--la div permet de définir la disposition des éléments grâce à la propriété display:grid;-->
         <div class="texte t2"><!--un pattern se répète au cours du site avec du texte à gauche et une image et un dégradé à droite-->
