--- a/indexp5.html
+++ b/indexp5.html
@@ -21,7 +21,7 @@
                 <button id="busd" onclick="menu()"><div id="s1"></div><div id="s2"></div><div id="s3"></div></button>
             </div>
             <a href="http://valentinf.xyz/DM-NSI-2/indexp5.html" class="buttonmenu"><img src="images/refresh.png" alt="bouton relance site" id="logo96px"></a><!--lien-->
-            <a href="https://github.com/Intfly/DM-NSI-2"  class="buttonmenu"><img src="images/github.png" alt="logo github" id="logo512px"></a>
+            <a href="https://github.com/Intfly/dm-nsi-2"  class="buttonmenu"><img src="images/github.png" alt="logo github" id="logo512px"></a>
             <a href="http://valentinf.xyz/DM-NSI-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
         </div> 
         <div class="barre"><!--barre lattérale qui s'affiche une fois qu'on clique sur le bouton sandwich-->
