--- a/indexp3.html
+++ b/indexp3.html
@@ -8,5 +8,26 @@
 </head>
 <body>
     <a href="http://valentinf.xyz/dm-nsi-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a><!--bouton de retour au menu-->
+    <div class="texte">
+        <h1>
+            Valentin <br>
+            Fournel <br>
+            1ere Institut Notre Dame de Meudon<br>
+            +33 7 69 76 35 07<br>
+            <a href = "mailto: valentin@valentinf.xyz">valentin@valentinf.xyz</a> 
+        </h1>
+        <h2>
+            <div class="souligne">Objet : Demande de stage</div>
+        </h2>
+        
+        <p>
+            Madame, Monsieur <br>
+            Actuellement en 1ere à l’institut Notre Dame de Meudon, je cherche un stage d’une vingtaine de jours pendant la période Juillet-Août.<br>
+            Afin de développer mes compétences de développeur, je suis à la recherche d’un stage de manière à acquérir une expérience pratique du métier de développeur. Je suis capable de me documenter sur des langages de programmation afin d’être le plus flexible possible.<br>
+            Les technologies utilisées par votre entreprise ont captivé mon attention. Le fait d’allier un domaine comme le web 3.0 avec la biométrie est très intéressant. Travailler à vos côtés me permettrait d’appliquer mes compétences sur un projet concret, ce qui nous serait mutuellement profitable.<br>
+            Je reste à votre disposition pour toute demande d’information complémentaire.<br>
+            Cordialement.
+        </p>
+    </div>
 </body>
 </html>
