--- a/indexp4.html
+++ b/indexp4.html
@@ -45,7 +45,7 @@
             <div class="texte">
                 <div id="a1"></div> le développeur web utilise des langages tels que l'HTML et le CSS et des langages de programmations comme le Javascript et le PHP. Ces langages sont améliorés par des frameworks comme Bootstrap(CSS), angular(JS).</br>Il doit aussi se servir d'API comme Apollo(TypeScript) 
                 </br></br></br>
-                <div id="a2"></div>le développeur utilise des langages de programmation comme le Swift(pour IOS) et Java ou Kotlin(pour Android). Il doit aussi savoir utiliser des Frameworks comme Flutter(Dart) ou React Native(React) afin de développer des applications cross-platform.
+                <div id="a2"></div>le développeur mobile utilise des langages de programmation comme le Swift(pour IOS) et Java ou Kotlin(pour Android). Il doit aussi savoir utiliser des Frameworks comme Flutter(Dart) ou React Native(React) afin de développer des applications cross-platform.
                 </br></br></br>
                 <div id="a3"></div> le développeur logiciel quant à lui utilise des langages comme le C++, le C# et le Java. Il utilse des frameworks comme QT(C++), AWT(Java) et  WinForms(C#)
             </div>
@@ -56,9 +56,9 @@
         <div class="boite">  
             <div class="texte">
                 <div id="a4"></div>Le métier de développeur n'est pas de tout repos. Il nécessite un apprentissage permanent et une quantité de travail élevée comparé à un travail plus conventionnel.
-                </br></br></br>
+                </br></br>
                 <div id="a5"></div> Des burnouts sont constatés chez certains développeurs. C'est pourquoi une partie d'eux passent en freelance afin d'avoir des deadlines plus raisonnables(d'après <a href="https://www.jesuisundev.com/ce-que-personne-ne-te-dira-sur-le-metier-de-developpeur/">jesuisundev.com</a>)
-                </br></br></br>
+                </br></br>
                 <div id="a6"></div>Avec un salaire d'entrée de plus de 2000€(d'après <a href="https://fr.indeed.com/career/d%C3%A9veloppeur/salaries?from=top_sb">Indeed.com</a>), le métier de développeur attire aussi par sa rémunération élevée.
             </div>
         </div>
