--- a/indexp5.html
+++ b/indexp5.html
@@ -22,7 +22,7 @@
             </div>
             <a href="http://valentinf.xyz/DM-NSI-2/indexp5.html" class="buttonmenu"><img src="images/refresh.png" alt="bouton relance site" id="logo96px"></a><!--lien-->
             <a href="https://github.com/Intfly/dm-nsi-2"  class="buttonmenu"><img src="images/github.png" alt="logo github" id="logo512px"></a>
-            <a href="http://valentinf.xyz/DM-NSI-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
+            <a href="http://valentinf.xyz/dm-nsi-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
         </div> 
         <div class="barre"><!--barre lattérale qui s'affiche une fois qu'on clique sur le bouton sandwich-->
             <h2>menu</h2><!--texte décrivant les icones-->
