changement nom de domaine

--- a/indexp2.html
+++ b/indexp2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="boites"><!-- je sépare ma page en deux parties, celle qui s'affiche en première(en haut du site) et celle qui s'affiche lors du défilement de la page, toutes deux ont une hauteur de 100hv afin de prendre la totalité de la hauteur de l'écran chacune.-->
-        <a href="http://valentinf.xyz/dm-nsi-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
+        <a href="index.html" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
         <div class="desc">
             <p class="moi_txt" style="color:rgb(26, 26, 26);font-size:2.5em;">-stage chez absolute PC en 2020</br>-obtention du Brevet des collèges en 2020</br>-obtention de la certification allemande en 2021</br>-passage du BAC de français en 2022</br>-passage du BAC en 2023</p>
         </div>
