--- a/indexp3.html
+++ b/indexp3.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="images/lettremotivlogo.png"><!--permet de relier un icone qui s'affichera sur la barre des onglets ouverts-->
 </head>
 <body>
-    <a href="http://valentinf.xyz/dm-nsi-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a><!--bouton de retour au menu-->
+    <a href="index.html" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a><!--bouton de retour au menu-->
     <div class="texte">
         <h1>
             Valentin <br>
